--- a/css/style.css
+++ b/css/style.css
@@ -44,11 +44,12 @@
 .background {
     color: black;
     background-color: #e7e6e6;
+    margin: 10px 20px;
 }
 
-@media screen and (min-width:700px) and (max-width:1555px) {
+@media screen and (min-width:1000px) and (max-width:1555px) {
 
-    .gall{
+    .gall {
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -58,7 +59,7 @@
     .gall-sm {
         height: 100px;
         display: block;
-        margin:10px auto;
+        margin: 10px auto;
         border-radius: 10px;
     }
 
@@ -68,5 +69,118 @@
         box-shadow: 0 0 10px 10px #a3a3a3;
         border-radius: 20px;
     }
+
+    .cont-img {
+        height: 80px;
+    }
+
+}
+
+
+@media screen and (min-width:700px) and (max-width:1000px) {
+
+    .gall {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .gall-sm {
+        height: 75px;
+        display: block;
+        margin: 10px;
+        border-radius: 10px;
+    }
+
+    .main-img {
+        height: 300px;
+        margin: 10px 20px;
+        box-shadow: 0 0 10px 10px #a3a3a3;
+        border-radius: 20px;
+    }
+
+    .option {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    .cont-img {
+        height: 80px;
+    }
+
+}
+
+
+
+@media screen and (min-width:400px) and (max-width:700px) {
+
+    .gall {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .gall-sm {
+        height: 75px;
+        display: block;
+        margin: 10px;
+        border-radius: 10px;
+    }
+
+    .main-img {
+        height: 300px;
+        margin: 10px 20px;
+        box-shadow: 0 0 10px 10px #a3a3a3;
+        border-radius: 20px;
+    }
+
+    .option {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .cont-img {
+        height: 40px;
+    }
+
+}
+
+
+@media screen and (max-width:400px) {
+
+    .gall {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .gall-sm {
+        height: 50px;
+        display: block;
+        margin: 10px;
+        border-radius: 10px;
+    }
+
+    .main-img {
+        height: 200px;
+        margin: 10px 20px;
+        box-shadow: 0 0 10px 10px #a3a3a3;
+        border-radius: 20px;
+    }
+
+    .option {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    
+.cont-img{
+    height: 40px;
+}
 
 }
