--- a/css/home.css
+++ b/css/home.css
@@ -29,6 +29,16 @@
         height: 80px;
     }
 
+    .test-card {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        margin: 10px auto;
+        border-radius: 30px;
+    }
+
 }
 
 
@@ -63,6 +73,16 @@
 
     .cont-img {
         height: 80px;
+    }
+
+    .test-card {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        margin: 10px auto;
+        border-radius: 30px;
     }
 
 }
@@ -102,6 +122,16 @@
         height: 40px;
     }
 
+    .test-card {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        margin: 10px auto;
+        border-radius: 30px;
+    }
+
 }
 
 
@@ -138,16 +168,26 @@
         height: 40px;
     }
 
+    .test-card {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        margin: 10px auto;
+        border-radius: 30px;
+    }
+
 }
-.test-img{
+
+.test-img {
     height: 300px;
     display: block;
     margin: 10px;
     border-radius: 30px;
 }
 
-.test-card
-{
+.test-card {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -157,7 +197,7 @@
     border-radius: 30px;
 }
 
-.test-text{
+.test-text {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -165,20 +205,20 @@
     width: 50%;
 }
 
-.selector{
-    border:solid 1x black;
+.selector {
+    border: solid 1x black;
     border-radius: 50%;
     font-size: 30px;
     padding: 5px;
     margin: 2px;
 }
 
-.button-container{
+.button-container {
     display: flex;
     justify-content: center;
 }
 
-.cont-img:hover{
+.cont-img:hover {
     border: 1px solid black;
     border-radius: 10px;
     box-shadow: 0 0 10px 5px #a3a3a3;
