--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,18 @@
+.menu-item {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.menu-item img {
+    max-width: 150px;
+    border-radius: 5px 0 0 5px;
+}
+.menu-item-content {
+    padding: 15px;
+}
+
 @media screen and (min-width:1000px) and (max-width:1555px) {
     .starter {
         display: flex;
