--- a/css/menu.css
+++ b/css/menu.css
@@ -112,3 +112,40 @@
         margin: 10px;
     }
 }
+
+.menu-list:hover{
+    box-shadow: 0 0 10px 5px #a3a3a3;
+}
+.container1 {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 50px 0;
+    text-align: center;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+h1 {
+    color: #dc3545;
+}
+img {
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+p {
+    font-size: 18px;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+.form-control {
+    width: 100px;
+    display: inline-block;
+}
+#total {
+    font-weight: bold;
+    color: #000000;
+}
+
+.wid{
+    width: 30%;
+}
