--- a/css/contact.css
+++ b/css/contact.css
@@ -4,5 +4,14 @@
     margin-bottom: 20px;
     cursor: pointer;
 }
+@media screen and (max-width:500px){
+    .star {
+        height: 50px;
+        padding: 5px;
+        margin-bottom: 10px;
+        cursor: pointer;
+    }
+}
+
 
 
