--- a/css/contact.css
+++ b/css/contact.css
@@ -16,6 +16,11 @@
         justify-content:space-evenly;
         align-items: center;
     } 
+    .accordion-item{
+        width: 80%;
+        display: block;
+        margin: 10px auto;
+    }
 }
 
 @media screen and (max-width:600px) {
