--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
 
+
 .font-heading {
     font-family: "Acme", sans-serif;
 }
@@ -41,4 +42,16 @@
     color: black;
     background-color: #e7e6e6;
     margin: 10px 20px;
+}
+
+@media screen and (min-width:500px) and (max-width:1550px){
+    .header-img{
+        height: 50px;
+    }
+}
+
+@media screen and  (max-width:500px){
+    .header-img{
+        height: 30px;
+    }
 }
