contact page updated

--- a/css/contact.css
+++ b/css/contact.css
@@ -49,3 +49,15 @@
 
 
 
+.back-img {
+    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../images/cafe1.jpg);
+    padding: 100px 0;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.bg-colour{
+    background-color: #ffffb3;
+}
