--- a/css/menu.css
+++ b/css/menu.css
@@ -39,6 +39,9 @@
     .menuimg{
         height: 500px;
     }
+    .menuimg2{
+        height: 300px;
+    }
 
 }
 
@@ -49,9 +52,7 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-    }
-
-    
+    }    
     .sub {
         display: flex;
         flex-direction: row;
@@ -71,6 +72,9 @@
     }
     .menuimg{
         height: 500px;
+    }
+    .cent{
+        display: none;
     }
 
 }
@@ -104,6 +108,9 @@
     .menuimg{
         height: 300px;
     }
+    .cent{
+        display: none;
+    }
 }
 
 
@@ -134,6 +141,9 @@
     }
     .menuimg{
         height: 280px;
+    }
+    .cent{
+        display: none;
     }
 }
 
@@ -193,5 +203,15 @@ p {
     width: 80%;
     display: block;
     margin: 0 auto;
+}
+
+.cent{
+    display: flex;
+    flex-direction: column;
+    justify-content: baseline;
+}
+
+.menuimg2{
+    opacity: 50%;
 }
 
